--- a/src/app/components/exams/add-question-modal/add-question-modal.component.html
+++ b/src/app/components/exams/add-question-modal/add-question-modal.component.html
@@ -55,7 +55,7 @@
 
         <!-- Category -->
         <div class="form-group">
-          <label for="category">Kategorija</label>
+          <label for="category">Kategorija *</label>
           <select
             id="category"
             name="category"
