--- a/src/app/components/exams/exams.component.html
+++ b/src/app/components/exams/exams.component.html
@@ -83,8 +83,8 @@
       <!-- New Exam Section -->
       <div class="exam-start-section">
         <div class="exam-info">
-          <h3>Sudački Ispit</h3>
-          <p>Klikom na gumb "Pokreni Ispit" automatski će se generirati novi ispit s 25 nasumično odabranih pitanja.</p>
+          <h3>Sudački ispit</h3>
+          <p>Klikom na gumb "Pokreni ispit" automatski će se generirati novi ispit s 25 nasumično odabranih pitanja.</p>
           <div class="exam-details">
             <div class="detail-item">
               <span class="label">Broj pitanja:</span>
@@ -106,7 +106,7 @@
         </div>
         <button class="start-exam-btn" (click)="startNewExam()" [disabled]="generatingExam">
           <i class="icon-play"></i>
-          {{ generatingExam ? 'Priprema ispita...' : 'Pokreni Ispit' }}
+          {{ generatingExam ? 'Priprema ispita...' : 'Pokreni ispit' }}
         </button>
       </div>
     </ng-template>
