--- a/src/app/components/games-assigned/games-assigned.component.html
+++ b/src/app/components/games-assigned/games-assigned.component.html
@@ -47,12 +47,12 @@
           (input)="onFilterChange()">
       </div>
       <div class="filter-group">
-        <label>Domaći Tim</label>
+        <label>Domaći tim</label>
         <input type="text" class="form-control" placeholder="Pretraži po domaćem timu"
           [(ngModel)]="filterValues.homeTeam" (input)="onFilterChange()">
       </div>
       <div class="filter-group">
-        <label>Gostujući Tim</label>
+        <label>Gostujući tim</label>
         <input type="text" class="form-control" placeholder="Pretraži po gostujućem timu"
           [(ngModel)]="filterValues.awayTeam" (input)="onFilterChange()">
       </div>
