--- a/src/app/components/games-assigned/edit-game-modal/edit-game-modal.component.html
+++ b/src/app/components/games-assigned/edit-game-modal/edit-game-modal.component.html
@@ -38,7 +38,7 @@
         <form class="game-form">
           <div class="form-row">
             <div class="form-group">
-              <label for="homeTeam">Domaći Tim *</label>
+              <label for="homeTeam">Domaći Tim</label>
               <input 
                 type="text" 
                 id="homeTeam" 
@@ -49,7 +49,7 @@
                 required>
             </div>
             <div class="form-group">
-              <label for="awayTeam">Gostujući Tim *</label>
+              <label for="awayTeam">Gostujući Tim</label>
               <input 
                 type="text" 
                 id="awayTeam" 
@@ -63,7 +63,7 @@
 
           <div class="form-row">
             <div class="form-group">
-              <label for="date">Datum *</label>
+              <label for="date">Datum</label>
               <input 
                 type="date" 
                 id="date" 
@@ -75,7 +75,7 @@
                 required>
             </div>
             <div class="form-group">
-              <label for="time">Vrijeme *</label>
+              <label for="time">Vrijeme</label>
               <input 
                 type="time" 
                 id="time" 
@@ -88,7 +88,7 @@
           </div>
 
           <div class="form-group">
-            <label for="venue">Mjesto *</label>
+            <label for="venue">Mjesto</label>
             <input 
               type="text" 
               id="venue" 
@@ -101,7 +101,7 @@
 
           <div class="form-row">
             <div class="form-group">
-              <label for="competition">Natjecanje *</label>
+              <label for="competition">Natjecanje</label>
               <select 
                 id="competition" 
                 [(ngModel)]="gameForm.competition" 
@@ -113,7 +113,7 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="status">Status *</label>
+              <label for="status">Status</label>
               <select 
                 id="status" 
                 [(ngModel)]="gameForm.status" 
