--- a/src/app/components/expenses/expenses-modal/expenses-modal.component.html
+++ b/src/app/components/expenses/expenses-modal/expenses-modal.component.html
@@ -24,7 +24,7 @@
     
 
         <div class="form-group">
-          <label for="reportType">Tip Izvješća<span class="required">*</span></label>
+          <label for="reportType">Tip izvješća<span class="required">*</span></label>
           <div class="select-wrapper">
             <select 
               id="reportType" 
