--- a/src/app/components/expense-report-details/modal-expense-report-details/modal-expense-report-details.component.html
+++ b/src/app/components/expense-report-details/modal-expense-report-details/modal-expense-report-details.component.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="form-group">
-          <label for="description">Kratki Opis</label>
+          <label for="description">Kratki opis</label>
           <textarea 
             id="description" 
             class="form-control textarea-control" 
@@ -66,7 +66,7 @@
 
         <div class="form-row">
           <div class="form-group">
-            <label for="unit">Mjerna Jedinica</label>
+            <label for="unit">Mjerna jedinica</label>
             <div class="select-wrapper">
               <select 
                 id="unit" 
@@ -108,7 +108,7 @@
           </div>
 
           <div class="form-group">
-            <label for="unitPrice">Cijena Jedinice (€)</label>
+            <label for="unitPrice">Cijena jedinice (€)</label>
             <input 
               type="number" 
               id="unitPrice" 
