--- a/src/app/components/basket-rules/basket-rules.component.scss
+++ b/src/app/components/basket-rules/basket-rules.component.scss
@@ -35,7 +35,7 @@
   color: #7f8c8d;
   font-size: 1rem;
   line-height: 1.6;
-  max-width: 600px;
+  // max-width: 600px;
   
   a {
     color: #3498db;
