--- a/src/app/components/games-assigned/kontrola-modal/kontrola-modal.component.html
+++ b/src/app/components/games-assigned/kontrola-modal/kontrola-modal.component.html
@@ -142,11 +142,11 @@
 
             <!-- Comments Section -->
             <div class="comments-section">
-              <h4><i class="fas fa-comments"></i> Komentari i Napomene</h4>
+              <h4><i class="fas fa-comments"></i> Komentari i napomene</h4>
               <div class="textarea-group">
                 <div class="form-group">
                   <label [for]="'kontroliraniSudac_' + (currentPage - 1)">
-                    <i class="fas fa-user-check"></i> Kontrolirani Sudac
+                    <i class="fas fa-user-check"></i> Kontrolirani sudac
                   </label>
                   <textarea 
                     [id]="'kontroliraniSudac_' + (currentPage - 1)"
@@ -160,7 +160,7 @@
 
                 <div class="form-group">
                   <label [for]="'komentiranesituacije_' + (currentPage - 1)">
-                    <i class="fas fa-exclamation-triangle"></i> Komentirane Situacije
+                    <i class="fas fa-exclamation-triangle"></i> Komentirane situacije
                   </label>
                   <textarea 
                     [id]="'komentiranesituacije_' + (currentPage - 1)"
@@ -174,7 +174,7 @@
 
                 <div class="form-group">
                   <label [for]="'komentarUtakmice_' + (currentPage - 1)">
-                    <i class="fas fa-clipboard-list"></i> Komentar Utakmice i Cjelokupna Izvedba
+                    <i class="fas fa-clipboard-list"></i> Komentar utakmice i cjelokupna izvedba
                   </label>
                   <textarea 
                     [id]="'komentarUtakmice_' + (currentPage - 1)"
