--- a/src/app/components/expense-report-details/modal-expense-report-details/modal-expense-report-details.component.html
+++ b/src/app/components/expense-report-details/modal-expense-report-details/modal-expense-report-details.component.html
@@ -2,7 +2,7 @@
 <div class="modal-overlay" *ngIf="isOpen" (click)="onBackdropClick($event)">
   <div class="modal-container">
     <div class="modal-header">
-      <h3>Dodaj Trošak</h3>
+      <h3>Dodaj trošak</h3>
       <button class="close-btn" (click)="onClose()">&times;</button>
     </div>
     
