--- a/src/app/components/expenses/expenses-modal/expenses-modal.component.html
+++ b/src/app/components/expenses/expenses-modal/expenses-modal.component.html
@@ -2,7 +2,7 @@
 <div class="modal-overlay" *ngIf="isOpen" (click)="onBackdropClick($event)">
   <div class="modal-container">
     <div class="modal-header">
-      <h3>Novo Izvješće</h3>
+      <h3>Novo izvješće</h3>
       <button class="close-btn" (click)="onClose()"><i class="fa-solid fa-xmark"></i></button>
     </div>
     
